[package]
name = "NSmp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5"
anyhow = "1.0"
libc = "0.2"
[dependencies.rodio]
version = "0.17"
default-features = false
features = ["cpal"]