[package]
name = "NSmp"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = { version = "0.20.1", default-features = false, features = ["pulseaudio"] }
clap = { version = "4.0", features = ["derive"] }
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"